--- a/index.html
+++ b/index.html
@@ -1,5 +1,32 @@
+<!DOCTYPE html>
+<html>
+   <head>
+      <style>
+         table, th, td {
+            border: 1px solid black;
+            width: 100px;
+            height: 50px;
+         }
+      </style>
+   </head>
 
-<h1>hello world</h1>
-<h2>words</h2>
-
-<p>YES</p>
+   <body>
+      <h1>Heading</h1>
+      <table>
+         <tr>
+            <th colspan="3"></th>
+         </tr>
+         <tr>
+           <td></td>
+           <td></td>
+           <td></td>
+         </tr>
+         <tr>
+           <td colspan="3"></td>
+         </tr>
+         <tr>
+           <td colspan="3"></td>
+         </tr>
+      </table>
+   </body>
+</html>
