--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <head> 
+      <style>
+         table, th, td {
+            border: 1px solid black;
+            width: 500px;
+            height: 250px;
+         }
+      </style>
       
    </head>
 
