--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <style>
          table, th, td {
             border: 1px solid black;
-            width: 500px;
-            height: 250px;
+            width: 100%;
+            height: 50%;
          }
       </style>
       
