--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <table>
          <tr>
             <th colspan="3"></th>
+            <th 
+               <img src= Orange & Purple Geometric Tehnology Linkdln Banner.png>
          </tr>
          <tr>
            <td></td>
