--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       <table>
          <tr>
             <th colspan="3"></th>
-            <th 
-               <img src= Orange & Purple Geometric Tehnology Linkdln Banner.png>
+            <th>
+               <img src= "Orange & Purple Geometric Tehnology Linkdln Banner.png">
+                  </th>
          </tr>
          <tr>
            <td></td>
