--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <style>
          table, th, td {
             border: 1px solid black;
-            width: 500px;
+            width: 100%;
             height: 150px;
          }
       </style>
