--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
       <style>
          table, th, td {
             border: 1px solid black;
-            width: 100%;
             height: 100px;
          }
       </style>
    </head>
 
    <body>
+      <table style="witdth:100%">
       <h1>Heading</h1>
       <table>
          <tr>
