--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <style>
          table, th, td {
             border: 1px solid black;
+            width: 100%;
             height: 100px;
          }
       </style>
@@ -11,7 +12,6 @@
 
    <body>
      
-      <table style="witdth:100%">
       <h1>Heading</h1>
       <table>
          <tr>
