--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
    </head>
    <body>
       <h1>Heading</h1>
-      <table>
+      <table border=1">
          <tr>
-            <th colspan="3"></th>
+            <th colspan="3">ghkajdhksh</th>
          </tr>
          <tr>
            <td><a href=”index.html”>Button 1</a></td>
@@ -20,10 +20,10 @@
            <td><a href=”page3.html”>Button 3</a></td>
          </tr>
          <tr>
-           <td colspan="3"></td>
+           <td colspan="3">asd</td>
          </tr>
          <tr>
-           <td colspan="3"></td>
+           <td colspan="3">asd</td>
          </tr>
       </table>
    </body>
