--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <th colspan="3">ghkajdhksh</th>
          </tr>
          <tr>
-           <td><a href=”index.html”>Button 1</a></td>
-           <td><a href=”page2.html”>Button 2</a></td>
-           <td><a href=”page3.html”>Button 3</a></td>
+           <td width="33%"><a href=”index.html”>Button 1</a></td>
+           <td width="33%"><a href=”page2.html”>Button 2</a></td>
+           <td width="33%"><a href=”page3.html”>Button 3</a></td>
          </tr>
          <tr>
            <td colspan="3">asd</td>
