--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Headingvghjgjh</h1>
       <table border=1">
          <tr>
-            <th colspan="3">ghkajdhksh</th>
+            <th colspan="3">banner</th>
          </tr>
          <tr>
            <td width="33%"><a href=”index.html”>Button 122</a></td>
