--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head> 
       <style>
-        table, th, td {
+        table{
             border: 1px solid black;
             width: 100%;
             height: 100px;
