--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
       </style>
    </head>
    <body>
-      <h1>Headingvghjgjh</h1>
+      <h1>Heading</h1>
       <table border=1">
          <tr>
-            <th colspan="3">banner</th>
+            <th colspan="3"></th>
          </tr>
          <tr>
-           <td width="33%"><a href=”index.html”>Button 122</a></td>
+           <td width="33%"><a href=”index.html”>Button 1</a></td>
            <td width="33%"><a href=”page2.html”>Button 2</a></td>
            <td width="33%"><a href=”page3.html”>Button 3</a></td>
          </tr>
          <tr>
-           <td colspan="3">asd</td>
+           <td colspan="3"></td>
          </tr>
          <tr>
-           <td colspan="3">asd</td>
+           <td colspan="3"></td>
          </tr>
       </table>
    </body>
