--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            <td width="33%"><a href=”page3.html”>Button 3</a></td>
          </tr>
          <tr>
-           <td colspan="3"></td>
+           <td colspan="3">Homepage</td>
          </tr>
          <tr>
            <td colspan="3"></td>
