--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Heading</h1>
       <table border=1">
          <tr>
-            <th colspan="3"><img src="Orange & Purple Geometric Tehnology Linkln Banner.png"> alt="The Best Website In the World!"</th>
+            <th colspan="3"><img src="Orange & Purple Geometric Tehnology Linkln Banner.png" alt="The Best Website In the World!>"</th>
          </tr>
          <tr>
            <td width="33%"><a href=”index.html”>Button 1</a></td>
