--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <h1>Heading</h1>
       <table border=1">
          <tr>
-            <th colspan="3"><img src="Orange & Purple Geometric Tehnology Linkdln Banner.png" alt="The Best Website In the World!" height="400px" width="1330px">
+            <th colspan="3"><img src="Orange & Purple Geometric Tehnology Linkdln Banner.png" alt="The Best Website In the World!" 
+                               height="400px" width="900px">
             </th>
          </tr>
          <tr>
