--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            <td width="33%"><a href=”page3.html”>Button 3</a></td>
          </tr>
          <tr>
-           <td colspan="3">Home page</td>
+           <td colspan="3">Home Page</td>
          </tr>
          <tr>
            <td colspan="3"></td>
