Update and rename Page 2.html to page2.html

--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
            <td width="33%"><a href=”page3.html”>Button 3</a></td>
          </tr>
          <tr>
-           <td colspan="3">Home Page</td>
+           <td colspan="3">Page 2</td>
          </tr>
          <tr>
            <td colspan="3"></td>
