--- a/page3.html
+++ b/page3.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html>
+   <link rel="stylesheet" href="style.css">
+   <head> 
+      <style>
+        table{
+            border: 1px solid black;
+            height: 100px;
+        }
+      </style>
+   </head>
+   <body>
+      <table border=1">
+         <tr>
+            <th colspan="3"><img src="Orange & Purple Geometric Tehnology Linkdln Banner.png" alt="The Best Website In the World!" 
+                               height="400px" width="1350px">
+            </th>
+         </tr>
+         <tr>
+           <td width="33%"><a href=”index.html”>Button 1</a></td>
+           <td width="33%"><a href=”page2.html”>Button 2</a></td>
+           <td width="33%"><a href=”page3.html”>Button 3</a></td>
+         </tr>
+         <tr>
+           <td colspan="3">Page 3</td>
+         </tr>
+         <tr>
+           <td colspan="3"></td>
+         </tr>
+      </table>
+   </body>
+</html>
