--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </th>
          </tr>
          <tr>
-           <td width="33%"><a href=”index.html”>Button 1</a></td>
-           <td width="33%"><a href=”page2.html”>Button 2</a></td>
-           <td width="33%"><a href=”page3.html”>Button 3</a></td>
+           <td width="33%"><a href="index.html">Button 1</a></td>
+           <td width="33%"><a href="page2.html">Button 2</a></td>
+           <td width="33%"><a href="page3.html">Button 3</a></td>
          </tr>
          <tr>
            <td colspan="3">Home Page</td>
