--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
          <tr>
            <td colspan="3">Home Page</td>
          </tr>
+         <footer>
          <tr>
            <td colspan="3"></td>
          </tr>
+         </footer>
       </table>
    </body>
 </html>
