--- a/index.html
+++ b/index.html
@@ -28,5 +28,16 @@
            <td colspan="3"></td>
          </tr>
       </table>
+      <style>
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: DarkSalmon;
+  color: white;
+}
+      </style>
+         <footer>
+  <p>Contants are here<br>
+         </footer>
    </body>
 </html>
