--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ footer {
 }
       </style>
          <footer>
-  <p>Contants are here<br>
+  <p>Contacts are here<br>
          </footer>
    </body>
 </html>
