--- a/page3.html
+++ b/page3.html
@@ -29,5 +29,16 @@
            <td colspan="3"></td>
          </tr>
       </table>
+       <style>
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: DarkSalmon;
+  color: white;
+}
+      </style>
+         <footer>
+  <p>Contacts are here<br>
+         </footer>
    </body>
 </html>
