--- a/page3.html
+++ b/page3.html
@@ -13,7 +13,7 @@
    <body>
       <table border=1">
          <tr>
-            <th colspan="3"><img src="Orange & Purple Geometric Tehnology Linkdln Banner.png" alt="The Best Website In the World!" 
+            <th colspan="3"><img src="Environmental Impact of Computer Use.png" alt="The Best Website In the World!" 
                                height="400px" width="1350px">
             </th>
          </tr>
