--- a/page3.html
+++ b/page3.html
@@ -18,9 +18,9 @@
             </th>
          </tr>
          <tr>
-           <td width="33%"><a href="index.html">Button 1</a></td>
-           <td width="33%"><a href="page2.html">Button 2</a></td>
-           <td width="33%"><a href="page3.html">Button 3</a></td>
+           <td width="33%"><a href="index.html">Home Page</a></td>
+           <td width="33%"><a href="page2.html">Harmful Effects</a></td>
+           <td width="33%"><a href="page3.html">Reducing Impact on the Environmnet</a></td>
          </tr>
          <tr>
            <td colspan="3">Page 3</td>
