--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,9 @@
            <td colspan="3">Page 2</td>
          </tr>
          <tr>
-           <td colspan="3"></td>
+            <td>What are the environmental consequences of computer device production?</td>
+            <td>How does computer use harm the environment?</td>
+            <td>What are the negative effects of computer device disposal?</td>
          </tr>
       </table>
        <style>
