--- a/page2.html
+++ b/page2.html
@@ -22,12 +22,25 @@
            <td width="33%"><a href="page3.html">Reducing Impact on the Environment</a></td>
          </tr>
          <tr>
-           <td colspan="3">Page 2</td>
+           <td colspan="3">Harmful Effects</td>
          </tr>
          <tr>
             <td>What are the environmental consequences of computer device production?</td>
+            <td>Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
+            <td>The picture</td>
+         </tr>
+         <tr>
             <td>How does computer use harm the environment?</td>
+            <td>The computers uses a lot of energy, which burns up fossil fuels.</td>
+            <td>The picture</td>
+         </tr>
+         <tr>
             <td>What are the negative effects of computer device disposal?</td>
+            <td>When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
+            <td>The picture</td>
+         </tr>
+         <tr>
+           <td colspan="3">Page 2</td>
          </tr>
       </table>
        <style>
