--- a/page2.html
+++ b/page2.html
@@ -30,9 +30,15 @@
             <td>The picture</td>
          </tr>
          <tr>
+         <td colspan="3">blank</td>
+         </tr>
+         <tr>
             <td>How does computer use harm the environment?</td>
             <td>The computers uses a lot of energy, which burns up fossil fuels.</td>
             <td>The picture</td>
+         </tr>
+         <tr>
+         <td colspan="3">blank</td>
          </tr>
          <tr>
             <td>What are the negative effects of computer device disposal?</td>
