--- a/page2.html
+++ b/page2.html
@@ -30,7 +30,7 @@
             <td>The picture</td>
          </tr>
          <tr>
-         <td colspan="3">blank</td>
+            <td height="12px" colspan="3"></td>
          </tr>
          <tr>
             <td>How does computer use harm the environment?</td>
@@ -38,7 +38,7 @@
             <td>The picture</td>
          </tr>
          <tr>
-         <td colspan="3">blank</td>
+            <td height="12px" colspan="3"></td>
          </tr>
          <tr>
             <td>What are the negative effects of computer device disposal?</td>
@@ -46,7 +46,7 @@
             <td>The picture</td>
          </tr>
          <tr>
-           <td colspan="3">Page 2</td>
+            <td height="12px" colspan="3"></td>
          </tr>
       </table>
        <style>
