--- a/page2.html
+++ b/page2.html
@@ -30,6 +30,14 @@
             <td>The picture</td>
          </tr>
          <tr>
+            <td>Water Usage</td>
+            <td>
+               <ul>
+                  <li>yes</li>
+               </ul>
+            </td>
+         </tr>
+         <tr>
             <td height="12px" colspan="3"></td>
          </tr>
          <tr>
