--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,19 @@
             <td>Water Usage</td>
             <td>
                <ul>
-                  <li>yes</li>
+                  <li>On average it cost around 1.5 tons of water to create a computer.</li>
+               </ul>
+            </td>
+         </tr>
+         <tr>
+            <td>Natural resources</td>
+            <td>
+               <ul>
+                  <li>Aquifer depletion</li>
+                  <li>Deforestation</li>
+                  <li>Mining for fossil fuels</li>
+                  <li>Contamination of resources</li>
+                  <li>Soil erosion</li>
                </ul>
             </td>
          </tr>
@@ -45,6 +57,12 @@
             <td>The computers uses a lot of energy, which burns up fossil fuels.</td>
             <td>The picture</td>
          </tr>
+            <td>Energy consumption</td>
+            <td>
+               <ul>
+                  <li>If a computer was on for 8 hours it's would consume 600 kWh and that would be 175 kg of CO2 per year.</li>
+               </ul>
+            </td>
          <tr>
             <td height="12px" colspan="3"></td>
          </tr>
