--- a/page2.html
+++ b/page2.html
@@ -60,7 +60,7 @@
             <td>Energy consumption</td>
             <td>
                <ul>
-                  <li>If a computer was on for 8 hours it's would consume 600 kWh and that would be 175 kg of CO2 per year.</li>
+                  <li>If a computer was on for 8 hours it's would consume 600 kWh and that would be 175 kg of CO2 per year</li>
                </ul>
             </td>
          <tr>
@@ -71,6 +71,15 @@
             <td>When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
             <td>The picture</td>
          </tr>
+         <tr>
+            <td>Water Pollution</td>
+            <td>
+               <ul>
+                  <li>Metals can be eaten up by fish and can add up along the food chain</li>
+                  <li>We can't eat the fish because of the bioaccumulation</li>
+                  <li>Chemicals from e-waste disrupt the aquatic ecosystems</li>
+               </ul>
+            </td>
          <tr>
             <td height="12px" colspan="3"></td>
          </tr>
