--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
          </tr>
          <tr>
             <td>What are the environmental consequences of computer device production?</td>
-            <td>Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
+            <td left-margain="24px">Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
             <td>The picture</td>
          </tr>
          <tr>
