--- a/page2.html
+++ b/page2.html
@@ -80,7 +80,16 @@
                   <li>Chemicals from e-waste disrupt the aquatic ecosystems</li>
                </ul>
             </td>
+         </tr>
          <tr>
+            <td>Disturbance to farmers</td>
+            <td>
+               <ul>
+                  <li>Changes the soil's chemical compound</li>
+                  <li></li>
+               </ul>
+            </td>
+         </tr>
             <td height="12px" colspan="3"></td>
          </tr>
       </table>
