--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,9 @@
             <td>
                <ul>
                   <li>Changes the soil's chemical compound</li>
-                  <li></li>
+                  <li>The soil is less fertile</li>
+                  <li>Less crop yield</li>
+                  <li>Heavy metals build up in animals and insects that help with crop growth</li>
                </ul>
             </td>
          </tr>
