--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
            <td width="33%"><a href="page3.html">Reducing Impact on the Environment</a></td>
          </tr>
          <tr>
-           <td colspan="3">Harmful Effects</td>
+           <td colspan="3" font-size="32px">Harmful Effects</td>
          </tr>
          <tr>
             <td>What are the environmental consequences of computer device production?</td>
