--- a/page3.html
+++ b/page3.html
@@ -23,10 +23,25 @@
            <td width="33%"><a href="page3.html">Reducing Impact on the Environmnet</a></td>
          </tr>
          <tr>
-           <td colspan="3">Page 3</td>
+           <td colspan="3">Reducing Impact on the Environment</td>
          </tr>
          <tr>
-           <td colspan="3"></td>
+            <td>How can we minimize the impact of computer device production on the environment?</td>
+            <td>Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
+            <td>Picture</td>
+         </tr>
+         <tr>
+            <td>Efficient Resource Use</td>
+            <td>
+               <ul>
+                  <il>Increase the price of the produce so you don't need to extract as much</il>
+                  <il>Slowly remove resources that are harmful to the environment out of your product</il>
+                  <il>Use eco-friendly materials throughout the product</il>
+               </ul>
+            </td>
+         </tr>
+         <tr>
+            <td></td>
          </tr>
       </table>
        <style>
