--- a/page3.html
+++ b/page3.html
@@ -41,8 +41,27 @@
             </td>
          </tr>
          <tr>
-            <td></td>
+             <td height="12px" colspan="3"></td>
          </tr>
+         <tr>
+            <td>What are some ways to reduce the environmental impact of computer use?</td>
+            <td>Watch how much energy you have used, have energy-efficient appliances and set a time limit and optimize your settings and usage.</td>
+            <td>picture</td>
+         </tr>
+         <tr>
+            <td>Optimize your settings and usage</td>
+            <td>
+               <ul>
+                  <li>Use dark mode</li>
+                  <li>Turn of notifications</li>
+                  <li>Lower screen brightness</li>
+                  <li>Enable power saving mode</li>
+               </ul>
+            </td>
+         </tr>
+         <div>
+            
+         </div>
       </table>
        <style>
 footer {
