--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,19 @@
             </td>
          </tr>
          <div>
-            
+            <tr>
+               <td>How can we minimize the impact of computer device disposal on the environment?</td>
+               <td>Recycle old technology, buy computers that are made with biodegradable materials.</td>
+               <td>Picture</td>
+            </tr>
+            <tr>
+               <td>Old technology</td>
+               <td>
+                  <ul>
+                     <li
+                  </ul>
+               </td>
+            </tr>
          </div>
       </table>
        <style>
