--- a/page3.html
+++ b/page3.html
@@ -69,7 +69,8 @@
                <td>Old technology</td>
                <td>
                   <ul>
-                     <li
+                     <li>Less technology in the landfills</li>
+                     <li>Reduces consumption of natural resources</li>
                   </ul>
                </td>
             </tr>
