--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
             <td>Water Usage</td>
             <td>
                <ul>
-                  <li>On average it cost around 1.5 tons of water to create a computer.</li>
+                  <li>On average it cost around 1.5 tons of water to create a computer</li>
                </ul>
             </td>
          </tr>
