--- a/page3.html
+++ b/page3.html
@@ -59,7 +59,9 @@
                </ul>
             </td>
          </tr>
-         <div>
+         <tr>
+             <td height="12px" colspan="3"></td>
+         </tr>
             <tr>
                <td>How can we minimize the impact of computer device disposal on the environment?</td>
                <td>Recycle old technology, buy computers that are made with biodegradable materials.</td>
@@ -74,7 +76,6 @@
                   </ul>
                </td>
             </tr>
-         </div>
       </table>
        <style>
 footer {
