--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
          </tr>
          <tr>
             <td>What are the environmental consequences of computer device production?</td>
-            <td id="my-id">Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
+            <td>Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
             <td>The picture</td>
          </tr>
          <tr>
@@ -54,7 +54,7 @@
          </tr>
          <tr>
             <td>How does computer use harm the environment?</td>
-            <td id="my-id">The computers uses a lot of energy, which burns up fossil fuels.</td>
+            <td>The computers uses a lot of energy, which burns up fossil fuels.</td>
             <td>The picture</td>
          </tr>
             <td>Energy consumption</td>
@@ -68,7 +68,7 @@
          </tr>
          <tr>
             <td>What are the negative effects of computer device disposal?</td>
-            <td id="my-id">When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
+            <td>When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
             <td>The picture</td>
          </tr>
          <tr>
