--- a/page3.html
+++ b/page3.html
@@ -23,7 +23,7 @@
            <td width="33%"><a href="page3.html">Reducing Impact on the Environmnet</a></td>
          </tr>
          <tr>
-           <td colspan="3">Reducing Impact on the Environment</td>
+           <td colspan="3" font-size=100px>Reducing Impact on the Environment</td>
          </tr>
          <tr>
             <td>How can we minimize the impact of computer device production on the environment?</td>
