--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <td width="33%"><a href="page3.html">Reducing Impact on the Enviroment</a></td>
          </tr>
          <tr>
-           <td colspan="3">Home Page</td>
+           <td colspan="3" class="my-class">Home Page</td>
          </tr>
          <tr>
            <td colspan="3"></td>
