--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
    <body>
       <table border=1">
          <tr>
-            <th colspan="3"><img src="Environmental Impact of Computer Use.png" alt="The Best Website In the World!" 
+            <th colspan="3"><img src="Environmental Impact of Computer Use.png" alt="Environmetal Impact of Computer Use" 
                                height="400px" width="1350px">
             </th>
          </tr>
@@ -27,7 +27,9 @@
          <tr>
             <td>What are the environmental consequences of computer device production?</td>
             <td>Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
-            <td>The picture</td>
+            <td>
+               <img src="Carbon footprint of production.jpg" alt="Computer production creates a large carbon footprint">
+            </td>
          </tr>
          <tr>
             <td>Water Usage</td>
@@ -55,7 +57,9 @@
          <tr>
             <td>How does computer use harm the environment?</td>
             <td>The computers uses a lot of energy, which burns up fossil fuels.</td>
-            <td>The picture</td>
+            <td>
+               <img src="Computer energy usage.jpeg" alt="computers using a lot of energy image">
+            </td>
          </tr>
             <td>Energy consumption</td>
             <td>
@@ -69,7 +73,9 @@
          <tr>
             <td>What are the negative effects of computer device disposal?</td>
             <td>When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
-            <td>The picture</td>
+            <td>
+               <img src="Heavy metals in a water source.avif" alt="Heavy metals in a water source">
+            </td>
          </tr>
          <tr>
             <td>Water Pollution</td>
