--- a/page3.html
+++ b/page3.html
@@ -28,7 +28,9 @@
          <tr>
             <td>How can we minimize the impact of computer device production on the environment?</td>
             <td>Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
-            <td>Picture</td>
+            <td>
+               <img src="Sustainable way of using natural resources.jpg">
+            </td>
          </tr>
          <tr>
             <td>Efficient Resource Use</td>
@@ -46,7 +48,9 @@
          <tr>
             <td>What are some ways to reduce the environmental impact of computer use?</td>
             <td>Watch how much energy you have used, have energy-efficient appliances and set a time limit and optimize your settings and usage.</td>
-            <td>picture</td>
+            <td>
+               <img src="Dark mode on.png">
+            </td>
          </tr>
          <tr>
             <td>Optimize your settings and usage</td>
@@ -65,7 +69,9 @@
             <tr>
                <td>How can we minimize the impact of computer device disposal on the environment?</td>
                <td>Recycle old technology, buy computers that are made with biodegradable materials.</td>
-               <td>Picture</td>
+               <td>
+                  <img src="Biodegradable technology.jpeg" alt"biodegradable technology">
+               </td>
             </tr>
             <tr>
                <td>Old technology</td>
