--- a/page3.html
+++ b/page3.html
@@ -29,7 +29,8 @@
             <td>How can we minimize the impact of computer device production on the environment?</td>
             <td>Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
             <td>
-               <img src="Sustainable way of using natural resources.jpg">
+               <img src="Sustainable way of using natural resources.jpg"
+                  height="200px" width="100%">
             </td>
          </tr>
          <tr>
@@ -49,7 +50,8 @@
             <td>What are some ways to reduce the environmental impact of computer use?</td>
             <td>Watch how much energy you have used, have energy-efficient appliances and set a time limit and optimize your settings and usage.</td>
             <td>
-               <img src="Dark mode on.png">
+               <img src="Dark mode on.png"
+                  height="200px" width="100%">
             </td>
          </tr>
          <tr>
