--- a/page3.html
+++ b/page3.html
@@ -72,7 +72,10 @@
                <td>How can we minimize the impact of computer device disposal on the environment?</td>
                <td>Recycle old technology, buy computers that are made with biodegradable materials.</td>
                <td>
-                  <img src="Biodegradable technology.jpeg" alt"biodegradable technology">
+                  <img src="Biodegradable technology.jpeg" 
+                     height="200px" 
+                     width="100%" 
+                     alt="biodegradable technology">
                </td>
             </tr>
             <tr>
