--- a/page2.html
+++ b/page2.html
@@ -28,7 +28,9 @@
             <td>What are the environmental consequences of computer device production?</td>
             <td>Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
             <td>
-               <img src="Carbon footprint of production.jpg" alt="Computer production creates a large carbon footprint">
+               <img src="Carbon footprint of production.jpg" 
+                  height="200px" width="100%" 
+                  alt="Computer production creates a large carbon footprint">
             </td>
          </tr>
          <tr>
@@ -58,7 +60,9 @@
             <td>How does computer use harm the environment?</td>
             <td>The computers uses a lot of energy, which burns up fossil fuels.</td>
             <td>
-               <img src="Computer energy usage.jpeg" alt="computers using a lot of energy image">
+               <img src="Computer energy usage.jpeg" 
+                  height="200px" width="100%"
+                  alt="computers using a lot of energy image">
             </td>
          </tr>
             <td>Energy consumption</td>
@@ -74,7 +78,9 @@
             <td>What are the negative effects of computer device disposal?</td>
             <td>When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
             <td>
-               <img src="Heavy metals in a water source.avif" alt="Heavy metals in a water source">
+               <img src="Heavy metals in a water source.avif" 
+                  height="200px" width="100%"
+                  alt="Heavy metals in a water source">
             </td>
          </tr>
          <tr>
