--- a/page3.html
+++ b/page3.html
@@ -30,7 +30,7 @@
             <td>Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
             <td>
                <img src="Sustainable way of using natural resources.jpg"
-                  height="200px" width="75%">
+                  height="200px" width="75%" align="center">
             </td>
          </tr>
          <tr>
