--- a/page3.html
+++ b/page3.html
@@ -30,7 +30,7 @@
             <td>Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
             <td>
                <img src="Sustainable way of using natural resources.jpg"
-                  height="200px" width="75%" text-align="center">
+                  height="200px" width="75%" align="center">
             </td>
          </tr>
          <tr>
@@ -51,7 +51,7 @@
             <td>Watch how much energy you have used, have energy-efficient appliances and set a time limit and optimize your settings and usage.</td>
             <td>
                <img src="Dark mode on.png"
-                  height="200px" width="75%">
+                  height="200px" width="75%" align="center">
             </td>
          </tr>
          <tr>
@@ -74,7 +74,8 @@
                <td>
                   <img src="Biodegradable technology.jpeg" 
                      height="200px" 
-                     width="75%" 
+                     width="75%"
+                     align="center"
                      alt="biodegradable technology">
                </td>
             </tr>
