--- a/page2.html
+++ b/page2.html
@@ -29,7 +29,7 @@
             <td>Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
             <td>
                <img src="Carbon footprint of production.jpg" 
-                  height="200px" width="100%" 
+                  height="200px" width="100%" class="center"
                   alt="Computer production creates a large carbon footprint">
             </td>
          </tr>
@@ -61,7 +61,7 @@
             <td>The computers uses a lot of energy, which burns up fossil fuels.</td>
             <td>
                <img src="Computer energy usage.jpeg" 
-                  height="200px" width="100%"
+                  height="200px" width="100%" class="center"
                   alt="computers using a lot of energy image">
             </td>
          </tr>
@@ -79,7 +79,7 @@
             <td>When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
             <td>
                <img src="Heavy metals in a water source.avif" 
-                  height="200px" width="100%"
+                  height="200px" width="100%" class="center"
                   alt="Heavy metals in a water source">
             </td>
          </tr>
