--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
          </tr>
          <tr>
             <td>What are the environmental consequences of computer device production?</td>
-            <td>Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
+            <td class="mid text">Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
             <td>
                <img src="Carbon footprint of production.jpg" 
                   height="200px" width="100%" class="center"
@@ -58,7 +58,7 @@
          </tr>
          <tr>
             <td>How does computer use harm the environment?</td>
-            <td>The computers uses a lot of energy, which burns up fossil fuels.</td>
+            <td class="mid text">The computers uses a lot of energy, which burns up fossil fuels.</td>
             <td>
                <img src="Computer energy usage.jpeg" 
                   height="200px" width="100%" class="center"
@@ -76,7 +76,7 @@
          </tr>
          <tr>
             <td>What are the negative effects of computer device disposal?</td>
-            <td>When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
+            <td class="mid text">When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
             <td>
                <img src="Heavy metals in a water source.avif" 
                   height="200px" width="100%" class="center"
