--- a/page3.html
+++ b/page3.html
@@ -37,9 +37,9 @@
             <td>Efficient Resource Use</td>
             <td>
                <ul>
-                  <il>Increase the price of the produce so you don't need to extract as much</il>
-                  <il>Slowly remove resources that are harmful to the environment out of your product</il>
-                  <il>Use eco-friendly materials throughout the product</il>
+                  <li>Increase the price of the produce so you don't need to extract as much</li>
+                  <li>Slowly remove resources that are harmful to the environment out of your product</li>
+                  <li>Use eco-friendly materials throughout the product</li>
                </ul>
             </td>
          </tr>
