--- a/page3.html
+++ b/page3.html
@@ -27,7 +27,7 @@
          </tr>
          <tr>
             <td>How can we minimize the impact of computer device production on the environment?</td>
-            <td>Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
+            <td class="mid-text">Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
             <td>
                <img src="Sustainable way of using natural resources.jpg"
                   height="200px" width="75%" class="center">
@@ -48,7 +48,7 @@
          </tr>
          <tr>
             <td>What are some ways to reduce the environmental impact of computer use?</td>
-            <td>Watch how much energy you have used, have energy-efficient appliances and set a time limit and optimize your settings and usage.</td>
+            <td class="text-mid">Watch how much energy you have used, have energy-efficient appliances and set a time limit and optimize your settings and usage.</td>
             <td>
                <img src="Dark mode on.png"
                   height="200px" width="75%" class="center">
@@ -70,7 +70,7 @@
          </tr>
             <tr>
                <td>How can we minimize the impact of computer device disposal on the environment?</td>
-               <td>Recycle old technology, buy computers that are made with biodegradable materials.</td>
+               <td class="mid-text">Recycle old technology, buy computers that are made with biodegradable materials.</td>
                <td>
                   <img src="Biodegradable technology.jpeg" 
                      height="200px" 
