--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,7 @@
            <td colspan="3" class="my-class">Harmful Effects</td>
          </tr>
          <tr>
-            <td>What are the environmental consequences of computer device production?</td>
+            <td>What are The Environmental Consequences of Computer Device Production?</td>
             <td class="mid-text">Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
             <td>
                <img src="Carbon footprint of production.jpg" 
@@ -42,7 +42,7 @@
             </td>
          </tr>
          <tr>
-            <td>Natural resources</td>
+            <td>Natural Resources</td>
             <td>
                <ul>
                   <li>Aquifer depletion</li>
@@ -57,7 +57,7 @@
             <td height="12px" colspan="3"></td>
          </tr>
          <tr>
-            <td>How does computer use harm the environment?</td>
+            <td>How Does Computer Use Harm The Environment?</td>
             <td class="mid-text">The computers uses a lot of energy, which burns up fossil fuels.</td>
             <td>
                <img src="Computer energy usage.jpeg" 
@@ -65,7 +65,7 @@
                   alt="computers using a lot of energy image">
             </td>
          </tr>
-            <td>Energy consumption</td>
+            <td>Energy Consumption</td>
             <td>
                <ul>
                   <li>If a computer was on for 8 hours it's would consume 600 kWh and that would be 175 kg of CO2 per year</li>
@@ -75,7 +75,7 @@
             <td height="12px" colspan="3"></td>
          </tr>
          <tr>
-            <td>What are the negative effects of computer device disposal?</td>
+            <td>What are The Negative Effects of Computer Device Disposal?</td>
             <td class="mid-text">When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
             <td>
                <img src="Heavy metals in a water source.avif" 
@@ -94,7 +94,7 @@
             </td>
          </tr>
          <tr>
-            <td>Disturbance to farmers</td>
+            <td>Disturbance to Farmers</td>
             <td>
                <ul>
                   <li>Changes the soil's chemical compound</li>
