--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,7 @@
            <td colspan="3" class="my-class">Harmful Effects</td>
          </tr>
          <tr>
-            <td>What are The Environmental Consequences of Computer Device Production?</td>
+            <td>What are the Environmental Consequences of Computer Device Production?</td>
             <td class="mid-text">Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
             <td>
                <img src="Carbon footprint of production.jpg" 
@@ -57,7 +57,7 @@
             <td height="12px" colspan="3"></td>
          </tr>
          <tr>
-            <td>How Does Computer Use Harm The Environment?</td>
+            <td>How Does Computer Use Harm the Environment?</td>
             <td class="mid-text">The computers uses a lot of energy, which burns up fossil fuels.</td>
             <td>
                <img src="Computer energy usage.jpeg" 
@@ -75,7 +75,7 @@
             <td height="12px" colspan="3"></td>
          </tr>
          <tr>
-            <td>What are The Negative Effects of Computer Device Disposal?</td>
+            <td>What are the Negative Effects of Computer Device Disposal?</td>
             <td class="mid-text">When metals like lead, mercury, and cadmium are placed in a landfill they can leak into the soil, which can kill crops and contaminate nearby water sources.</td>
             <td>
                <img src="Heavy metals in a water source.avif" 
