--- a/page3.html
+++ b/page3.html
@@ -26,10 +26,10 @@
            <td colspan="3" class="my-class">Reducing Impact on the Environment</td>
          </tr>
          <tr>
-            <td>How can we minimize the impact of computer device production on the environment?</td>
+            <td>How Can We Minimize the Impact of Computer Device Production on the Environment?</td>
             <td class="mid-text">Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
             <td>
-               <img src="Sustainable way of using natural resources.jpg"
+               <img src="Sustainable way of using natural resouces.jpg"
                   height="200px" width="75%" class="center">
             </td>
          </tr>
@@ -47,7 +47,7 @@
              <td height="12px" colspan="3"></td>
          </tr>
          <tr>
-            <td>What are some ways to reduce the environmental impact of computer use?</td>
+            <td>What Are Some Ways to Reduce the Environmental Impact of Computer Use?</td>
             <td class="text-mid">Watch how much energy you have used, have energy-efficient appliances and set a time limit and optimize your settings and usage.</td>
             <td>
                <img src="Dark mode on.png"
@@ -55,7 +55,7 @@
             </td>
          </tr>
          <tr>
-            <td>Optimize your settings and usage</td>
+            <td>Optimize Your Settings And Usage</td>
             <td>
                <ul>
                   <li>Use dark mode</li>
@@ -69,7 +69,7 @@
              <td height="12px" colspan="3"></td>
          </tr>
             <tr>
-               <td>How can we minimize the impact of computer device disposal on the environment?</td>
+               <td>How Can We Minimize The Impact of Computer Device Disposal on The Environment?</td>
                <td class="mid-text">Recycle old technology, buy computers that are made with biodegradable materials.</td>
                <td>
                   <img src="Biodegradable technology.jpeg" 
@@ -80,7 +80,7 @@
                </td>
             </tr>
             <tr>
-               <td>Old technology</td>
+               <td>Old Technology</td>
                <td>
                   <ul>
                      <li>Less technology in the landfills</li>
