--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,7 @@
            <td colspan="3" class="my-class">Harmful Effects</td>
          </tr>
          <tr>
-            <td>What are the Environmental Consequences of Computer Device Production?</td>
+            <td>What Are the Environmental Consequences of Computer Device Production?</td>
             <td class="mid-text">Creates green-house gases, over extracting natural resources and produces a lot of trash and a lot of water to produce.</td>
             <td>
                <img src="Carbon footprint of production.jpg" 
