--- a/page3.html
+++ b/page3.html
@@ -29,7 +29,7 @@
             <td>How Can We Minimize the Impact of Computer Device Production on the Environment?</td>
             <td class="mid-text">Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
             <td>
-               <img src="Sustainable way of using natural resouces.jpg"
+               <img src="Sustainable way of using natural resources.jpg"
                   height="200px" width="75%" class="center">
             </td>
          </tr>
