--- a/page3.html
+++ b/page3.html
@@ -30,7 +30,10 @@
             <td class="mid-text">Be aware of how much resources have been extracted, use resources efficiently during the production process.</td>
             <td>
                <img src="Sustainable way of using natural resources.jpg"
-                  height="200px" width="75%" class="center">
+                  height="200px" 
+                  width="75%" 
+                  class="center" 
+                  alt="Chopped trees">
             </td>
          </tr>
          <tr>
@@ -51,7 +54,10 @@
             <td class="text-mid">Watch how much energy you have used, have energy-efficient appliances and set a time limit and optimize your settings and usage.</td>
             <td>
                <img src="Dark mode on.png"
-                  height="200px" width="75%" class="center">
+                  height="200px" 
+                  width="75%" 
+                  class="center"
+                  alt="Phone on dark mode">
             </td>
          </tr>
          <tr>
