--- a/page3.html
+++ b/page3.html
@@ -61,7 +61,7 @@
             </td>
          </tr>
          <tr>
-            <td>Optimize Your Settings And Usage</td>
+            <td>Optimize Your Settings and Usage</td>
             <td>
                <ul>
                   <li>Use dark mode</li>
