--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            <td colspan="3" class="my-class">Home Page</td>
          </tr>
          <tr>
-           <td colspan="3"><a href="https://www.it.ox.ac.uk/article/environment-and-it">Click Here for More Information</a></td>
+           <td colspan="3" color="orange yellow"><a href="https://www.it.ox.ac.uk/article/environment-and-it">To Learn More Click Here</a></td>
          </tr>
       </table>
       <style>
