--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <head> 
       <style>
         table{
-            border: solid black;
+            border: 1px solid black;
             height: 100px;
         }
       </style>
