--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         table{
             border: 1px solid black;
             height: 100px;
+            border-style: solid;
         }
       </style>
    </head>
